_sass/theme/_image-layouts.scss
/* Lightgallery */
.lg-inline .lg-backdrop {
    background-color: transparent;
}

.inline-gallery-container {
    width: 100%;
    // make sure any landscape image will be fully visible
    // portraits are automatically scaled-down by lightgallery
    height: min(70vh, 70vw);
    padding-block-end: $base-spacing-size;
    margin-block: $base-spacing-size;
    // TODO: center images vertically inside
}

.lightGallery-captions {
    width: fit-content;
    margin: auto;
    background-color: rgba(black, 0.8);
    padding: $small-spacing-size;
    border-radius: 3px;
}

.lightGallery-captions:empty {
    display: none;
}

/* Single Images */
figure figcaption {
    width: fit-content;
    margin-inline: auto;
}

figure.centered {
    max-width: 100%;
    margin-inline: auto;
}

figure.float-inline-start {
    max-width: calc(50% - 1rem);
    margin-inline-end: 1rem;
    float: inline-start;
}

figure.float-inline-end {
    max-width: calc(50% - 1rem);
    margin-inline-start: 1rem;
    float: inline-end;
}

.flow-root {
    display: flow-root;
}

.float-clear {
    clear: both;
}

/* Image-Divider */
.image-divider {
    display: flex;
    flex-direction: column;
    gap: $small-spacing-size;

    img {
        width: 100%;
        height: auto;
        vertical-align: middle;
    }

    @media screen and (min-width: $palm-width) {
        flex-direction: row;
    }
}

